<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map">View on Map</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=5] -->
    <string name="pref_location_default" translatable="false">92694</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing unit in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Default type for unit preference [CHAR LIMIT=NONE] -->
    <string name="pref_units_default" translatable="false">metric</string>

    <!-- Label for the units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Pick Your Units</string>

    <!-- Array containing the choices for temperature units -->
    <string-array name="pref_units_list_items" translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <!-- Array containing the values for the  -->
    <string-array name="pref_units_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="prefs_view_location_label">View Location on Map</string>
    <string name="prefs_view_location_key">view_location</string>


</resources>
