<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_location_default"
        android:title="@string/pref_location_label" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_units_list_items"
        android:entryValues="@array/pref_units_list_values"
        android:key="@string/pref_units_key"
        android:summary="%s"
        android:title="@string/pref_units_label" />

</PreferenceScreen>
